--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=13.90.17.101
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=batik
 DB_USERNAME=andri
-DB_PASSWORD=root
+DB_PASSWORD=root123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
