--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=13.90.17.101
 DB_PORT=3306
 DB_DATABASE=batik
 DB_USERNAME=andri
-DB_PASSWORD=roota
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
