--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:1M1z6YC6tilacoq/VF9j6GXz30fZkAYCULECHzWHNJs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://futsaloka.my.id
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=13.90.17.101
-# DB_HOST=127.0.0.1
+DB_HOST=localhost
+#DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=batik
 DB_USERNAME=andri
